# roomz

./: .gitignore  HISTORY.md  LICENSE  Makefile  PACKAGE.md  README.md  REQUIREMENTS.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
analysis/: 2026-05-14-architecture-review-I1-001.md  2026-05-26-api-review-config.md  I8-004-clevis-integration.md  I9-001-content-types.md  I9-002-participant-list.md  I9-003-question-type.md  I9-004-collapsible-messages.md  api-auth-I2-001.md  api-broadcast.md  api-display-names.md  api-email-integration.md  api-jwt-sessions.md  api-private-channels.md  api-python-client.md  config-api.md  config-security.md  functional.md  jwt-channels-architecture.md  security-auth-I2-001.md  security-clevis-migration.md  security-email-integration.md  security-jwt-sessions.md  security-private-channels.md  ux-auth-I2-001.md  ux-chat-ui.md  ux-display-names.md
analysis/reporting/I8-004/: consensus.md  plan-v2.md
app/: __init__.py  auth.py
app/components/auth/: __init__.py  auth.js
app/email/: __init__.py  console.py  protocol.py  resend.py
app/pages/: __init__.py
app/pages/chat/: __init__.py  chat.js
docs/: Makefile  api.md  changelog.md  conf.py  configuration.md  contributing.md  index.md  installation.md  quickstart.md  server.md
memory/: 2026-05-14-agile-testing-philosophy.md  2026-05-14-uv-primary-tool.md  websocket-testing.md
reporting/B-001/: consensus.md  summary.md
reporting/I1-001-minimal-chat-broadcast/: consensus.md  summary.md  ux-ui-review.md
reporting/I2-001/: consensus.md  development-summary.md  summary.md  ux-ui-review.md
reporting/I3-001-python-client/: summary.md
reporting/I4-001-jwt-session-tokens/: functional-review.md
reporting/I4-001-jwt-sessions/: consensus.md  summary.md
reporting/I4-002-private-channels/: consensus.md  development-summary.md  functional-review.md  summary.md
reporting/I5-001-email-integration/: consensus.md  functional-review.md
reporting/I7-001-display-names/: development-summary.md  test-coverage-fix-summary.md  ux-ui-review.md
reporting/I8-000/: consensus.md  functional-review.md
reporting/I8-004/: development-summary.md
research/: chat-room-features.md  clevis-evaluation.md  clevis-new-release.md
src/roomz/: __init__.py  __main__.py  config.py
src/roomz/cli/: __init__.py  __main__.py  app_tui.py  cli.py
src/roomz/cli/styles/: chat.tcss
src/roomz/client/: __init__.py  async_client.py  config.py  events.py  exceptions.py  session.py  state.py  sync_client.py
src/roomz/server/: __init__.py  auth.py  models.py
src/roomz/server/components/: __init__.py
src/roomz/server/components/auth/: __init__.py  auth.js
src/roomz/server/email/: __init__.py  console.py  resend.py  utils.py
src/roomz/server/pages/: __init__.py
src/roomz/server/pages/chat/: __init__.py  chat.js
src/roomz/server/static/css/: roomz.css
tests/: WEBSOCKET_TESTING.md  __init__.py  conftest.py  test_app_helpers.py  test_app_structure.py  test_auth.py  test_chat_page.py  test_cli_config.py  test_config.py  test_display_names.py  test_email_integration.py  test_jwt_integration.py  test_jwt_security.py  test_jwt_unit.py  test_private_channels.py  test_python_client.py  test_session.py  test_socketio_broadcast.py  test_websocket.py
