[project]
name = "roomz"
version = "0.1.0"
description = "Real-time chatroom web service with magic link authentication"
authors = [{name = "Christophe VG", email = "contact@christophe.vg"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["chat", "websocket", "real-time", "quart", "socketio", "authentication"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Framework :: AsyncIO",
]

dependencies = [
  "baseweb>=0.5.0",
  "gunicorn>=21.0.0",
  "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "tomli>=2.0.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "tox>=4.0.0",
  "twine>=6.0.0",
]

[project.scripts]
roomz = "app:asgi_app"

[project.urls]
Homepage = "https://github.com/christophevg/roomz"
Documentation = "https://github.com/christophevg/roomz#readme"
Repository = "https://github.com/christophevg/roomz"
Issues = "https://github.com/christophevg/roomz/issues"

[tool.uv.sources]
# Use local baseweb from parent directory
baseweb = { path = "../baseweb", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.tox]
env_list = ["py310", "py311", "py312"]

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
deps = ["-e .[dev]"]
commands = [["pytest", "-v"]]

[tool.tox.env.lint]
description = "Run linting"
deps = ["-e .[dev]"]
commands = [["ruff", "check", "app/", "tests/"]]

[tool.tox.env.typecheck]
description = "Run type checking"
deps = ["-e .[dev]"]
commands = [["mypy", "app/"]]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
