[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roomz"
version = "0.4.0"
description = "Real-time chatroom web service with magic link authentication"
authors = [{name = "Christophe VG", email = "contact@christophe.vg"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["chat", "websocket", "real-time", "quart", "socketio", "authentication"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]

dependencies = [
  "baseweb>=0.5.2",
  "gunicorn>=21.0.0",
  "uvicorn[standard]>=0.24.0",
  "python-socketio>=5.10.0",
  "aiohttp>=3.9.0",
  "rich>=13.0.0",
  "textual>=0.47.0",
  "resend>=2.30.1",
  "PyJWT>=2.8.0",
  "python-dotenv>=1.2.2",
  "clevis>=0.3.0",
  "tomli-w>=1.0.0",
  "envtoml>=0.2.0",
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.13.0",
  "ruff>=0.8.0",
  "tox>=4.0.0",
  "tox-uv>=1.0.0",
  "build>=1.0.0",
  "twine>=6.0.0",
  "coveralls>=3.3.0",
]

[project.scripts]
roomz = "roomz.__main__:run"
cli = "roomz.cli.app_tui:run_tui"

[project.urls]
Homepage = "https://github.com/christophevg/roomz"
Documentation = "https://github.com/christophevg/roomz#readme"
Repository = "https://github.com/christophevg/roomz"
Issues = "https://github.com/christophevg/roomz/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/roomz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=roomz --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 2

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["roomz"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.tox]
env_list = ["py310", "py311", "py312"]

[tool.tox.env_run_base]
description = "run tests with pytest"
skip_install = false
commands_pre = [
  ["uv", "pip", "install", "-e", "."],
  ["uv", "pip", "install", "pytest", "pytest-cov", "pytest-asyncio"],
]
commands = [["pytest", "tests", "-v", "--cov=roomz", "--cov-report=term-missing"]]

[dependency-groups]
dev = [
    "tomli>=2.4.1",
]



